--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.magicgathering">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,10 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MagicGathering">
-        <activity android:name=".view.CardListActivity"
+        <activity android:name=".view.CardDetailsActivity"></activity>
+        <activity
+            android:name=".view.CardListActivity"
             android:theme="@style/Theme.MagicGathering.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
