--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MagicGathering">
-        <activity android:name=".view.CardDetailsActivity"></activity>
+        <activity
+            android:name=".view.CardDetailsActivity"
+            android:theme="@style/Theme.MagicGathering.NoActionBar" />
         <activity
             android:name=".view.CardListActivity"
             android:theme="@style/Theme.MagicGathering.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
